--- a/src/index.html
+++ b/src/index.html
@@ -9,10 +9,13 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">-->
   <!-- Bootstrap core CSS -->
   <link href="./assets/css/bootstrap.min.css" rel="stylesheet">
   <!-- Material Design Bootstrap -->
   <link href="./assets/css/mdb.min.css" rel="stylesheet">
+  <!-- Material Design Bootstrap -->
+  <!--<link href="./assets/css/compiled.min.css" rel="stylesheet">-->
   <!-- Your custom styles (optional) -->
   <link href="./assets/css/style.min.css" rel="stylesheet">
   <style type="text/css">
